# artifacts/api-server/src/routes/index.ts
@@ -6,6 +6,7 @@ import paymentsRouter from "./payments";
 import storageRouter from "./storage";
 import adminRouter from "./admin";
 import catalogRouter from "./catalog";
+import whatsappRouter from "./whatsapp";
 
 const router: IRouter = Router();
 
@@ -16,5 +17,6 @@ router.use(paymentsRouter);
 router.use(storageRouter);
 router.use(adminRouter);
 router.use(catalogRouter);
+router.use(whatsappRouter);
 
 export default router;
