# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./business-profiles";
 export * from "./settings";
 export * from "./catalog";
 export * from "./auth";
+export * from "./whatsapp";
